--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -5,7 +5,7 @@
   align-items: center;
   position: relative;
   height: 100vh;
-  background-image: url(/assets/img/auth-hero.png);
+  background-image: url(/assets/img/auth-hero.webp);
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -34,10 +34,20 @@
 .auth {
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 100vh;
+  overflow: auto;
 }
 
 .auth-content {
   max-width: 320px;
+  margin-top: 15vh;
+}
+
+input[type="checkbox"]:hover {
+  cursor: pointer;
+}
+
+input[type="checkbox"]:checked {
+  background-color: var(--primary) !important;
+  border: none;
 }
