--- a/assets/css/utility.css
+++ b/assets/css/utility.css
@@ -19,3 +19,11 @@
 .mb-10 {
   margin-bottom: 10vh;
 }
+
+.ff-inter {
+  font-family: "Inter", sans-serif;
+}
+
+.ff-airbnb {
+  font-family: "Airbnb", sans-serif;
+}
