Update margin login & register

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -43,6 +43,12 @@
   margin-top: 15vh;
 }
 
+.auth-content::after {
+  content: ".";
+  display: block;
+  margin-top: 10vh;
+}
+
 input[type="checkbox"]:hover {
   cursor: pointer;
 }
