--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -41,6 +41,46 @@
   border-radius: 7px;
 }
 
+/* suggestion */
+.title-section {
+  border-left: 15px solid #EFC81A;
+  padding: 15px;
+  display: flex;
+  color: #3F3A3A;
+}
+
+.suggestion .left {
+  position: relative;
+}
+
+.suggestion .content .left div {
+  width: 400px;
+  height: 400px;
+  border-radius: 7px;
+  border: 3px solid #EFC81A;
+  margin-left: 30px;
+  margin-top: 30px;
+}
+
+.suggestion .content .left img {
+  position: absolute;
+  width: 400px;
+  height: 400px;
+  object-fit: center;
+  border-radius: 7px;
+}
+
+.suggestion .right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.suggestion hr {
+  width: 100px;
+  height: 2px;
+}
+
 @media (min-width: 992px) {
   .hero .decoration img {
     right: 100px;
