--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -144,6 +144,37 @@ hr {
   height: 250px;
 }
 
+/* footer */
+footer .top {
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-transform: capitalize;
+}
+
+footer .bottom {
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer .bottom ul {
+  display: flex;
+  list-style: none;
+}
+
+footer .bottom ul li {
+  margin: 0 10px;
+}
+
+footer .bottom ul li a {
+  font-size: .9rem;
+  text-decoration: none;
+}
+
 @media (min-width: 768px) {
   .title-section {
     margin-left: 60px;
