--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -5,11 +5,12 @@
 
 .nav-link {
   font-weight: 500;
+  color: #2E266F !important;
 }
 
 .active {
   padding-right: 5px;
-  border-bottom: 2px solid #3A3845;
+  border-bottom: 2px solid #2E266F;
 }
 
 .right-menu .icon {
