Menambahkan link untuk bagian other di halaman detail video dan mengubah background navbar menjadi putih + shadow

--- a/assets/css/auth.css
+++ b/assets/css/auth.css
@@ -68,6 +68,6 @@ input[type="checkbox"]:hover {
 }
 
 input[type="checkbox"]:checked {
-  background-color: var(--primary);
+  background-color: #EFC81A;
   border: none;
 }
