--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -24,3 +24,7 @@
 .right-menu a {
   text-decoration: none;
 }
+
+.nav-shadow {
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.19), 0 3px 3px rgba(0, 0, 0, 0.23);
+}
