--- a/assets/css/video.css
+++ b/assets/css/video.css
@@ -3,22 +3,27 @@
   margin-top: 120px;
 }
 
-.video img {
+.video {
   width: 100%;
   height: 250px;
+}
+
+.video img {
+  width: 99%;
+  height: 100%;
   object-fit: cover;
   border-radius: 7px;
 }
 
 @media (min-width: 576px) {
-  .video img {
+  .video {
     width: 100%;
     height: 350px;
   }
 }
 
 @media (min-width: 768px) {
-  .video img {
+  .video {
     width: 100%;
     max-width: 700px;
     height: 400px;
@@ -30,7 +35,7 @@
     height: 100% !important;
   }
 
-  .video img {
+  .video {
     width: 100%;
     max-width: 600px;
     height: 350px;
@@ -44,9 +49,9 @@
 }
 
 @media (min-width: 1200px) {
-  .video img {
+  .video {
     width: 100%;
-    max-width: 800px;
+    max-width: 750px;
     height: 420px;
   }
 
