--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -3,17 +3,17 @@
   transition: 0.5s;
 }
 
-.nav-link {
+.navbar .nav-link {
   font-weight: 500;
   color: #2E266F !important;
 }
 
-.active {
+.navbar .active {
   padding-right: 5px;
   border-bottom: 2px solid #2E266F;
 }
 
-.right-menu .icon {
+.navbar .right-menu .icon {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +21,7 @@
   height: 40px;
 }
 
-.right-menu a {
+.navbar .right-menu a {
   text-decoration: none;
 }
 
