--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -4,3 +4,60 @@
   margin-top: 120px;
   max-width: 800px;
 }
+
+.profile .icon {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.profile .icon:hover {
+  cursor: pointer;
+}
+
+.profile .picture {
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+}
+
+.recipe .active {
+  color: rgb(24, 24, 24) !important;
+}
+
+.recipe .card {
+  max-width: 350px;
+}
+
+.recipe img {
+  width: 100%;
+  max-width: 350px;
+  height: 220px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.recipe .title {
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+  font-size: 21px;
+}
+
+.recipe .action {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+}
+
+@media (min-width: 576px) {
+  .recipe img {
+    height: 150px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .recipe img {
+    height: 170px;
+  }
+}
